--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,6 @@
 "rules": {
     "at-rule-empty-line-before": [ "always", {
-      except: ["blockless-group"],
+      except: ["blockless-after-blockless"],
       ignore: ["after-comment"],
     } ],
     "at-rule-name-case": "lower",
@@ -50,7 +50,6 @@
     } ],
     "media-feature-colon-space-after": "always",
     "media-feature-colon-space-before": "never",
-    "media-feature-no-missing-punctuation": true,
     "media-feature-range-operator-space-after": "always",
     "media-feature-range-operator-space-before": "always",
     "media-query-list-comma-newline-after": "always-multi-line",
@@ -64,10 +63,7 @@
     "number-no-trailing-zeros": true,
     "property-case": "lower",
     "property-no-unknown": true,
-    "rule-nested-empty-line-before": [ "always", {
-      ignore: ["after-comment"],
-    } ],
-    "rule-non-nested-empty-line-before": [ "always", {
+    "rule-empty-line-before": [ "always", {
       ignore: ["after-comment"],
     } ],
     "selector-attribute-brackets-space-inside": "never",
